# lykta

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
houdini/: lyktacam.hdanc  lyktasave.hdanc
scenes/spheres/: neural.json  petzval.json  realistic.json  spheres.json
src/: AOIntegrator.cpp  Application.hpp  BSDFIntegrator.cpp  Camera.hpp  CommandLine.hpp  Distribution.hpp  Emitter.hpp  EnvironmentEmitter.cpp  Image.cpp  Image.hpp  Integrator.hpp  JSONHelper.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshEmitter.cpp  NeuralCamera.cpp  NeuralCamera.hpp  RandomPool.cpp  RandomPool.hpp  RealisticCamera.cpp  RealisticCamera.hpp  Renderer.cpp  Renderer.hpp  Sampling.hpp  Scene.cpp  Scene.hpp  Texture.cpp  Texture.hpp  Unidirectional.cpp  common.h  main.cpp  material.h  random.h  warp.h
